[package]
name = "rs-mongo-stream"
version = "0.3.0"
authors = ["LSH <github@lsh.tech>"]
edition = "2021"
description = "Wrapper on mongo to easier the way to handle mongo stream"
license = "GPL-3.0"


[dependencies]
mongodb = { version = "2.0.0", features = ["tokio-runtime"] }
tokio = { version = "1.0.0", features = ["full"] }
tokio-stream = { version = "0.1.0" }
